Fixed multiple appearances of devices

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,7 +1,5 @@
 {
 	"pair": {
-		"rgb_bulb": {
-			"title": "Apparaten aan het toevoegen"
-		}
+		"title": "Selecteer de apparaten die je wilt toevoegen"
 	}
 }
