--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-	"no_response": "Bridge does not respond",
+	"no_response": "Bridge is not responding",
 	"pair": {
 		"title": "Select the devices you want to add"
 	}
