RGB driver refactored to use node-homey-device-driver

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,7 @@
 {
 	"no_response": "Bridge is not responding",
+	"initializing": "Connecting...",
+	"not_found": "This device could not be found",
 	"pair": {
 		"title": "Select the devices you want to add"
 	}
