--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,5 +1,7 @@
 {
 	"no_response": "Bridge reageert niet",
+	"initializing": "Bezig met verbinden...",
+	"not_found": "Dit apparaat kon niet worden gevonden",
 	"pair": {
 		"title": "Selecteer de apparaten die je wilt toevoegen"
 	}
